fixed overflowing container, with profile and settings content

--- a/css/style-dashboard.css
+++ b/css/style-dashboard.css
@@ -1,8 +1,3 @@
-.dashboard-body {
-    height: 100vh;
-    overflow: hidden;
-}
-
 button.sidebar-btn {
     border: none;
     background: none;
@@ -14,6 +9,10 @@ div.sidebar-nav {
 }
 
 @media(min-width:992px){
+    .dashboard-body {
+        height: 100vh;
+        overflow: hidden;
+    }
     div.sidebar-nav {
         padding: 10px;
         height: 100vh;
@@ -72,4 +71,31 @@ div.main-content {
 #table-list .card-body{
     overflow: auto;
     max-height: 400px;
+}
+
+i#profile-pic{
+    font-size: 50px;
+    color: black;
+    border: 5px solid black;
+    border-radius: 50%;
+    padding: 30px;
+    cursor: pointer;
+    display: block;
+}
+
+button.btn{
+    background-color: chocolate;
+    border: none;
+    color: white;
+}
+
+button.btn:hover{
+    background-color: rgba(168, 84, 24);
+    box-shadow: none;
+    border-color: rgba(168, 84, 24);
+    color: whitesmoke;
+}
+
+#profile-form, #settings-form{
+    display: none;
 }
